--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -5,7 +5,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Kanit", sans-serif;
+    font-family: "Kanit", arial, sans-serif;
 }
 
 :root {
@@ -483,6 +483,7 @@ body {
     display: grid;
     place-content: center;
     position: relative;
+    /* box-shadow: 0px 3px 10px 1px #7300ff; */
 
     border-radius: calc(var(--dateH) / 2) 0 0 calc(var(--dateH) / 2);
 }
